--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -298,8 +298,7 @@
                                 <label>{{"Comments" | localize}}</label>
                                 <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>        
                                 <div class="border-left border-bottom border-right rounded">
-                                    <p-editor [(ngModel)]="comment"
-                                                (keydown.space)="$event.preventDefault();"name="HtmlEditorInput" 
+                                    <p-editor [(ngModel)]="comment" name="HtmlEditorInput" 
                                                 [style]="{'height':'230px','border':'none'}">
                                                 <p-header>
                                                     <span class="ql-formats">
