--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -97,8 +97,7 @@
                                     <label>{{"Comments" | localize}}</label>
                                     <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>        
                                     <div class="border-left border-bottom border-right rounded">
-                                        <p-editor [(ngModel)]="itemizedDto.commentBody"
-                                            (keydown.space)="$event.preventDefault();"name="HtmlEditorInput" 
+                                        <p-editor [(ngModel)]="itemizedDto.commentBody" name="HtmlEditorInput" 
                                             [style]="{'height':'230px','border':'none'}">
                                             <p-header>
                                                 <span class="ql-formats">
