Categories DropDown UI issue resolved

--- a/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.css
+++ b/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.css
@@ -16,6 +16,18 @@
     background-color: #fff;
 
 }
+.input-arrow{
+    position: relative;
+}
+.input-arrow::after{
+    content: "▼"  !important ;
+    position: absolute  !important;
+    top: 50%  !important;
+    right: 5px  !important;
+    transform: translateY(-50%)  !important;
+    font-size: 11px  !important;
+    color: #606060  !important;
+}
 .select .options .option {
     padding: 5px 10px;
     cursor: pointer;
