--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -40,7 +40,7 @@
                             <div class="record-card-header-bottom-inner2">
                               
                                 <div class="upper-content">
-                                    <div class="users-box-parent pr-3">
+                                    <div class="users-box-parent">
                                         <div class="users-box">
                                             <div *ngIf="plusUserBadgeForHeader"
                                                 class="member-count bg-lightgrey text-blue">
