Update in Task Details of Closing Check list

--- a/angular/src/app/main/checklist/task-details/task-details.component.css
+++ b/angular/src/app/main/checklist/task-details/task-details.component.css
@@ -233,7 +233,8 @@
         }
 
         .arrowimage{
-            height: 15px;
+            color: #3F94FD;
+            font-size: 20px;
         }
 
         .border-grey{
