--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -166,7 +166,7 @@
                                                                         <option value="right" label="Right"></option>
                                                                         <option value="justify" label="Justify"></option>
                                                                     </select> 
-                                                                    <button aria-label="Image" class="ql-image"></button>
+                                                                    <button aria-label="Image"data-toggle="tooltip" title="Upload Image" class="ql-image"></button>
                                                                 </span>
                                                             </p-header>
                                                         </p-editor>
