--- a/angular/src/app/shared/layout/profile/my-settings-modal.component.html
+++ b/angular/src/app/shared/layout/profile/my-settings-modal.component.html
@@ -14,13 +14,13 @@
                     <tabset>
                         <tab heading="{{'Profile' | localize}}">
                             <div class="form-group">
-                                <label for="Name">{{"Name" | localize}} *</label>
+                                <label for="Name">{{"FirstName" | localize}} *</label>
                                 <input id="Name" #nameInput="ngModel" class="form-control" type="text" name="Name" [(ngModel)]="user.name" required maxlength="64">
                                 <validation-messages [formCtrl]="nameInput"></validation-messages>
                             </div>
 
                             <div class="form-group">
-                                <label for="Surname">{{"Surname" | localize}} *</label>
+                                <label for="Surname">{{"LastName" | localize}} *</label>
                                 <input id="Surname" #surnameInput="ngModel" type="text" name="Surname" class="form-control" [(ngModel)]="user.surname" required maxlength="64">
                                 <validation-messages [formCtrl]="surnameInput"></validation-messages>
                             </div>
