--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -191,10 +191,9 @@
 
                                     <div class="form-group ">
                                         <label>{{"Comments" | localize}}</label>
-                                        <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>
-                                        <div class="form-group rounded border-bottom border-right border-left">
+                                        <div class="form-group">
                                             <p-editor [(ngModel)]="checklist.commentBody" name="HtmlEditorInput" 
-                                                [style]="{'height':'230px','border':'none'}">
+                                                [style]="{'height':'230px'}">
                                                 <p-header>
                                                     
                                                     <span class="ql-formats">
@@ -228,21 +227,11 @@
                                                             <option value="right" label="Right"></option>
                                                             <option value="justify" label="Justify"></option>
                                                         </select>
-                                                        <button _ngcontent-c7="" data-toggle="tooltip" title="Upload Image"aria-label="Image" class="ql-image " type="button"><svg viewBox="0 0 18 18"> <rect class="ql-stroke" height="10" width="12" x="3" y="4"></rect> <circle class="ql-fill" cx="6" cy="7" r="1"></circle> <polyline class="ql-even ql-fill" points="5 12 5 11 7 9 8 10 11 7 13 9 13 12 5 12"></polyline> </svg></button>   
-                                                        <button (click)="commentFile.click()" data-toggle="tooltip" class="ql-link" title="Upload Files">
-                                                            
-                                                        </button>
+                                                         
+                                                        <button aria-label="Image" data-toggle="tooltip" title="Upload Image" class="ql-image"></button>
                                                     </span>
                                                 </p-header>
                                             </p-editor>
-                                            <ul class="chat-wrapper px-2">
-                                                <li *ngFor="let i of commentFiles; let indexx = index" class="chat-wrapper-inner">
-                                                <a href="javascipt:void(0)" class="docx-btn">
-                                                    <span>{{i.name}}</span>
-                                                    <i class="fas fa-times" (click)="removeCommentFile(indexx)"></i>
-                                                </a>
-                                                </li>
-                                            </ul>
                                         </div>
                                         <!-- <div class="btnMargin" >
                                         <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
@@ -264,10 +253,9 @@
                     <div class="row">
                         <div class="col-md-10 form-group">
                             <label class="bg-color">{{"Instruction" | localize}}</label>
-                            <div class="form-group border-bottom border-right border-left rounded">
-                                <input hidden type="file" (change)="uploadFile($event)" #insturctionFile>
+                            <div class="form-group">
                                 <p-editor [(ngModel)]="checklist.instruction" name="HtmlEditorInput"
-                                    [style]="{'height':'230px','border':'none'}">
+                                    [style]="{'height':'230px'}">
                                     <p-header>
                                         <span class="ql-formats">
                                             <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
@@ -299,27 +287,13 @@
                                                 <option value="center" label="Center"></option>
                                                 <option value="right" label="Right"></option>
                                                 <option value="justify" label="Justify"></option>
-                                            </select>   
-                                            <button (click)="insturctionFile.click()" data-toggle="tooltip" title="Upload File">
-                                                <svg viewBox="0 0 18 18">
-                                                <rect class="ql-stroke" height="10" width="12" x="3" y="4"></rect>
-                                                <circle class="ql-fill" cx="6" cy="7" r="1">                                 
-                                                </circle>
-                                                <polyline class="ql-even ql-fill" points="5 12 5 11 7 9 8 10 11 7 13 9 13 12 5 12">
-                                                </polyline>
-                                                </svg>
+                                            </select> 
+                                            <button aria-label="Image" data-toggle="tooltip" title="Upload Image" class="ql-image">
+
                                             </button>
                                         </span>
                                     </p-header>
                                 </p-editor>
-                                <ul class="chat-wrapper px-2">
-                                    <li *ngFor="let i of instructionFiles; let indexx = index" class="chat-wrapper-inner">
-                                      <a href="javascipt:void(0)" class="docx-btn">
-                                        <span>{{i.name}}</span>
-                                        <i class="fas fa-times" (click)="removeFile(indexx)"></i>
-                                      </a>
-                                    </li>
-                                </ul>
                             </div>
 
                         </div>
