--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -216,10 +216,9 @@
                             </div> -->
                             <div class="form-group giveCommentView" [ngClass]="{'disabled':!monthStatus}">
                                 <label>{{"Comments" | localize}}</label>
-                                <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>
-                                <div class="form-group border-bottom border-right border-left rounded">
+                                <div class="form-group">
                                     <p-editor [(ngModel)]="checklist.commentBody" name="HtmlEditorInput" 
-                                        [style]="{'height':'230px','border':'none'}">
+                                        [style]="{'height':'230px'}">
                                         <p-header>
                                             <span class="ql-formats">
                                                 <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
@@ -251,27 +250,11 @@
                                                     <option value="center" label="Center"></option>
                                                     <option value="right" label="Right"></option>
                                                     <option value="justify" label="Justify"></option>
-                                                </select>  
-                                                <button (click)="commentFile.click()" data-toggle="tooltip" title="Upload File" aria-label="Link" class="ql-link">
-                                                    <svg viewBox="0 0 18 18">
-                                                    <rect class="ql-stroke" height="10" width="12" x="3" y="4"></rect>
-                                                    <circle class="ql-fill" cx="6" cy="7" r="1">                                 
-                                                    </circle>
-                                                    <polyline class="ql-even ql-fill" points="5 12 5 11 7 9 8 10 11 7 13 9 13 12 5 12">
-                                                    </polyline>
-                                                    </svg>
-                                                </button>
+                                                </select> 
+                                                <button aria-label="Image" data-toggle="tooltip" title="Upload Image" class="ql-image"></button>
                                             </span>
                                         </p-header>
                                     </p-editor>
-                                    <ul class="chat-wrapper px-2">
-                                        <li *ngFor="let i of commentFiles; let indexx = index" class="chat-wrapper-inner">
-                                        <a href="javascipt:void(0)" class="docx-btn">
-                                            <span>{{i.name}}</span>
-                                            <i class="fas fa-times" (click)="removeCommentFile(indexx)"></i>
-                                        </a>
-                                        </li>
-                                    </ul>
                                 </div>
                                 <!-- <div class="mt-3 d-flex justify-content-end" >
                                     <button class="btn btn-brand" (click)="onComment()">{{"Comment" | localize}}</button>
@@ -305,10 +288,9 @@
                                 <p-editor [(ngModel)]="getTaskForEdit.instructionBody" name="HtmlEditorInput"
                                     [style]="{'height':'150px'}"></p-editor>
                             </div> -->
-                            <input hidden type="file" (change)="uploadFile($event)" #instructionFile>
-                                <div class="form-group border-bottom border-right border-left rounded">
+                               <div class="form-group ">
                                     <p-editor [(ngModel)]="getTaskForEdit.instructionBody" name="HtmlEditorInput" 
-                                        [style]="{'height':'230px','border':'none'}">
+                                        [style]="{'height':'230px'}">
                                         <p-header>
                                             <span class="ql-formats">
                                                 <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
@@ -340,27 +322,11 @@
                                                     <option value="center" label="Center"></option>
                                                     <option value="right" label="Right"></option>
                                                     <option value="justify" label="Justify"></option>
-                                                </select>   
-                                                <button (click)="instructionFile.click()" data-toggle="tooltip" title="Upload File">
-                                                    <svg viewBox="0 0 18 18">
-                                                    <rect class="ql-stroke" height="10" width="12" x="3" y="4"></rect>
-                                                    <circle class="ql-fill" cx="6" cy="7" r="1">                                 
-                                                    </circle>
-                                                    <polyline class="ql-even ql-fill" points="5 12 5 11 7 9 8 10 11 7 13 9 13 12 5 12">
-                                                    </polyline>
-                                                    </svg>
-                                                </button>
+                                                </select>  
+                                                <button aria-label="Image" data-toggle="tooltip" title="Upload Image" class="ql-image"></button>
                                             </span>
                                         </p-header>
                                     </p-editor>
-                                    <ul class="chat-wrapper px-2">
-                                        <li *ngFor="let i of instructionFiles; let indexx = index" class="chat-wrapper-inner">
-                                        <a href="javascipt:void(0)" class="docx-btn">
-                                            <span>{{i.name}}</span>
-                                            <i class="fas fa-times" (click)="removeFile(indexx)"></i>
-                                        </a>
-                                        </li>
-                                    </ul>
                                 </div>
                         </div>
                     </div>
