--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -108,11 +108,10 @@
 
                             <div class="form-group ">
                                 <label>{{"Comments" | localize}}</label>
-                                <input hidden type="file" (change)="uploadCommentFile($event)" #commentFile>
-                                        <div class="form-group border-bottom border-right border-left rounded">
+                                        <div class="form-group">
                                             <p-editor [disabled]="!taskDetailObject.monthStatus" [(ngModel)]="comment.body"
                                                  name="HtmlEditorInput" 
-                                                [style]="{'height':'230px','border':'none'}">
+                                                [style]="{'height':'230px'}">
                                                 <p-header>
                                                     <span class="ql-formats">
                                                         <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
@@ -144,27 +143,11 @@
                                                             <option value="center" label="Center"></option>
                                                             <option value="right" label="Right"></option>
                                                             <option value="justify" label="Justify"></option>
-                                                        </select>   
-                                                        <button (click)="commentFile.click()" data-toggle="tooltip" title="Upload File">
-                                                            <svg viewBox="0 0 18 18">
-                                                            <rect class="ql-stroke" height="10" width="12" x="3" y="4"></rect>
-                                                            <circle class="ql-fill" cx="6" cy="7" r="1">                                 
-                                                            </circle>
-                                                            <polyline class="ql-even ql-fill" points="5 12 5 11 7 9 8 10 11 7 13 9 13 12 5 12">
-                                                            </polyline>
-                                                            </svg>
-                                                        </button>
+                                                        </select>  
+                                                        <button aria-label="Image" data-toggle="tooltip" title="Upload Image" class="ql-image"></button>
                                                     </span>
                                                 </p-header>
                                             </p-editor>
-                                            <ul class="chat-wrapper px-2">
-                                                <li *ngFor="let i of commentFiles; let indexx = index" class="chat-wrapper-inner">
-                                                <a href="javascipt:void(0)" class="docx-btn">
-                                                    <span>{{i.name}}</span>
-                                                    <i class="fas fa-times" (click)="removeCommentFile(indexx)"></i>
-                                                </a>
-                                                </li>
-                                            </ul>
                                         </div>
 
                                  <div class="mt-3 d-flex justify-content-end">
