Spelling Issue in Reconciliation

--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -185,7 +185,7 @@
                     <div class="row">
                         <div class="col-md-10">
                             <div class="activity-box">
-                                <h5>Activity</h5>
+                                <h5>{{"Activity" | localize}}</h5>
                             </div>
                             <tabset class="tab-container tabbable-line" style="height: auto;">
                                 <tab heading="{{'Comments' | localize}}">
