--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -164,10 +164,10 @@
                         <div class="row">
                             <div class="col-sm-10 form-group">
                                 <div class="activity-box">
-                                    <h5>Activity</h5>
+                                    <h5>{{"Activity" | localize}}</h5>
                                 </div>
                                 <tabset class="tab-container tabbable-line">
-                                    <tab heading="{{'Comment' | localize}}">
+                                    <tab heading="{{'Comments' | localize}}">
                                             <div class="kt-widget3 " style="height: auto !important;">
                                                 <div *ngFor="let i of postedCommentList" class="kt-widget3__item ">
                                                     <div class="comments-header kt-widget3__header">
