--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -383,10 +383,10 @@
                     <div class="row">
                         <div class="col-md-10">
                             <div class="activity-box">
-                                <h5>Activity</h5>
+                                <h5>{{"Activity" | localize}}</h5>
                             </div>
                             <tabset class="tab-container tabbable-line">
-                                <tab heading="{{'Comment' | localize}}">
+                                <tab heading="{{'Comments' | localize}}">
                                 <div class="kt-widget3 " style="height: auto !important;">
                                     <div *ngFor="let i of postedCommentList" class="kt-widget3__item ">
                                         <div class="comments-header kt-widget3__header">
