--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -232,8 +232,7 @@
                                                 <div>
                                                     <span
                                                         class="border-0 {{i.result.PreviousValueColor}} text-white statusWidth1">{{i.result.PreviousValue}}</span>
-                                                    <img src="./assets/media/ClosingCheckList/picturemessage_uzg0nq30.png"
-                                                        class="mr-2 ml-2 arrowimage">
+                                                        <i class="fas fa-arrow-right mx-3"></i>
                                                     <span
                                                         class="border-0 {{i.result.NewValueColor}} text-white statusWidth1">{{i.result.NewValue}}</span>
                                                 </div>
@@ -255,15 +254,13 @@
                                                 </div>
                                                 <div *ngIf="i.propertyName == 'DueDate'">
                                                     <span>{{i.result.PreviousValue}}</span>
-                                                    <img src="./assets/media/ClosingCheckList/picturemessage_uzg0nq30.png"
-                                                        class="mr-2 ml-2 arrowimage">
+                                                    <i class="fas fa-arrow-right mx-3"></i>
                                                     <span>{{i.result.NewValue }}</span>
                                                 </div>
                             
                                                 <div>
                                                     <span>{{i.result.PreviousValue}}</span>
-                                                    <img src="./assets/media/ClosingCheckList/picturemessage_uzg0nq30.png"
-                                                        class="mr-2 ml-2 arrowimage">
+                                                    <i class="fas fa-arrow-right mx-3"></i>
                                                     <span>{{i.result.NewValue}}</span>
                                                 </div>
                             
@@ -286,8 +283,7 @@
                                                         class="badge2 {{i.result.colorPreviousValue}} d-inline-flex align-items-center justify-content-center">
                                                         {{i.result.PreviousValue.name | firstLetterOfWords}}</div>
                                                     <span>{{i.result.PreviousValue.name}}</span>
-                                                    <img src="./assets/media/ClosingCheckList/picturemessage_uzg0nq30.png"
-                                                        class="mr-2 ml-2 arrowimage">
+                                                    <i class="fas fa-arrow-right mx-3"></i>
                                                     <div style="height: 25px !important;width: 25px !important;"
                                                         class="badge2 {{i.result.colorNewValue}} d-inline-flex align-items-center justify-content-center">
                                                         {{i.result.NewValue.name | firstLetterOfWords}}</div>
