--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -380,7 +380,7 @@
 
 
 
-                                <tab heading="{{'History' | localize}}">
+                                <tab (selectTab)="getAuditLogOfAccount()" heading="{{'History' | localize}}">
                                     <div  *ngFor="let i of historyOfTask"  class="activity-box">
                                         <div *ngIf="i.propertyName == 'Status' " class="activity-inner d-flex flex-wrap align-items-center mb-4">
                                             <div class="activity-inner-a mb-3">
