--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -193,7 +193,7 @@
                                                 </div>
                                             </div>
                                     </tab>
-                                    <tab heading="{{'History' | localize}}">
+                                    <tab (selectTab)="getAuditLogOfAccount()" heading="{{'History' | localize}}">
                                         <div  *ngFor="let i of historyOfTask"  class="activity-box">                                                                                   
                                             <div *ngIf="i.propertyName != 'CreationTime'" class="activity-inner d-flex flex-wrap align-items-center mb-4">
                                                 <div class="activity-inner-a mb-3">
