--- a/angular/src/app/admin/users/users.component.html
+++ b/angular/src/app/admin/users/users.component.html
@@ -280,7 +280,7 @@
                 </span> -->
             </div>
             <div class="kt-subheader__toolbar">
-                <div class="kt-subheader__wrapper">
+                <div *ngIf="multiTenancySideIsTeanant" class="kt-subheader__wrapper">
                     <button (click)="inviteUser()" class="btn btn-primary"><i class="fa fa-plus"></i>Invite User</button>
                 </div>
                 <div class="kt-subheader__wrapper">
